--- a/StudentExercises/Properties/launchSettings.json
+++ b/StudentExercises/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "app/students",
+      "launchUrl": "students/GetAllStudents",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "StudentExercises": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "app/students",
+      "launchUrl": "students/GetAllStudents",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
